--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
     "autoprefixer": "^10.4.14",
+    "ofetch": "^1.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
