--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/nuxt": "^9.13.0",
     "autoprefixer": "^10.4.14",
     "ofetch": "^1.0.1",
     "postcss": "^8.4.21",
