--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "highlight.js": "^11.7.0",
     "ofetch": "^1.0.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "three": "^0.151.3"
   }
 }
