--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
+    "@types/prismjs": "^1.26.0",
     "@vueuse/core": "^9.13.0",
     "@vueuse/nuxt": "^9.13.0",
     "autoprefixer": "^10.4.14",
-    "highlight.js": "^11.7.0",
     "ofetch": "^1.0.1",
     "postcss": "^8.4.21",
+    "prismjs": "^1.29.0",
     "tailwindcss": "^3.2.7",
     "three": "^0.151.3"
   }
